@@ -1,0 +1,3 @@
+This folder contains code that at one point may have been part of the Skia API, but ended up
+being very specific to a single client. Thus, we removed it from our more general purpose API,
+but kept the functionality here for the one client that needs it.
