@@ -1,0 +1,11 @@
+/*
+ * Copyright 2022 Google LLC
+ *
+ * Use of this source code is governed by a BSD-style license that can be
+ * found in the LICENSE file.
+ */
+
+#include "client_utils/android/View3D.h"
+
+// Temporary, until Android updates to the new API
+using Sk3DView = android::skia::View3D;
