@@ -7,27 +7,23 @@
 
 //  Inspired by Rob Johnson's most excellent QuickDraw GX sample code
 
-#ifndef SkCamera_DEFINED
-#define SkCamera_DEFINED
+#ifndef View3D_DEFINED
+#define View3D_DEFINED
 
 #include "include/core/SkM44.h"
-#include "include/core/SkMatrix.h"
-#include "include/private/SkNoncopyable.h"
-
-// NOTE -- This entire header / impl is deprecated, and will be removed from Skia soon.
-//
-// Skia now has support for a 4x matrix (SkM44) in SkCanvas.
-//
 
 class SkCanvas;
+class SkMatrix;
 
-// DEPRECATED
-class SkPatch3D {
-public:
-    SkPatch3D();
+namespace android {
+namespace skia {
+
+class Patch3D {
+private:
+    Patch3D();
 
     void    reset();
-    void    transform(const SkM44&, SkPatch3D* dst = nullptr) const;
+    void    transform(const SkM44&, Patch3D* dst = nullptr) const;
 
     // dot a unit vector with the patch's normal
     SkScalar dotWith(SkScalar dx, SkScalar dy, SkScalar dz) const;
@@ -35,44 +31,38 @@ public:
         return this->dotWith(v.x, v.y, v.z);
     }
 
-    // deprecated, but still here for animator (for now)
-    void rotate(SkScalar /*x*/, SkScalar /*y*/, SkScalar /*z*/) {}
-    void rotateDegrees(SkScalar /*x*/, SkScalar /*y*/, SkScalar /*z*/) {}
-
-private:
-public: // make public for SkDraw3D for now
-    SkV3  fU, fV;
     SkV3  fOrigin;
+    SkV3  fU, fV;
 
-    friend class SkCamera3D;
+    friend class Camera3D;
+    friend class View3D;
 };
 
-// DEPRECATED
-class SkCamera3D {
-public:
-    SkCamera3D();
+class Camera3D {
+private:
+    Camera3D();
 
     void reset();
     void update();
-    void patchToMatrix(const SkPatch3D&, SkMatrix* matrix) const;
+    void patchToMatrix(const Patch3D&, SkMatrix* matrix) const;
 
     SkV3   fLocation;   // origin of the camera's space
     SkV3   fAxis;       // view direction
     SkV3   fZenith;     // up direction
     SkV3   fObserver;   // eye position (may not be the same as the origin)
 
-private:
     mutable SkMatrix    fOrientation;
     mutable bool        fNeedToUpdate;
 
     void doUpdate() const;
+
+    friend class View3D;
 };
 
-// DEPRECATED
-class SK_API Sk3DView : SkNoncopyable {
+class View3D {
 public:
-    Sk3DView();
-    ~Sk3DView();
+    View3D();
+    ~View3D();
 
     void save();
     void restore();
@@ -82,12 +72,10 @@ public:
     void rotateY(SkScalar deg);
     void rotateZ(SkScalar deg);
 
-#ifdef SK_BUILD_FOR_ANDROID_FRAMEWORK
     void setCameraLocation(SkScalar x, SkScalar y, SkScalar z);
     SkScalar getCameraLocationX() const;
     SkScalar getCameraLocationY() const;
     SkScalar getCameraLocationZ() const;
-#endif
 
     void getMatrix(SkMatrix*) const;
     void applyToCanvas(SkCanvas*) const;
@@ -99,9 +87,13 @@ private:
         Rec*    fNext;
         SkM44   fMatrix;
     };
-    Rec*        fRec;
-    Rec         fInitialRec;
-    SkCamera3D  fCamera;
-};
+    Rec*     fRec;
+    Rec      fInitialRec;
+    Camera3D fCamera;
 
-#endif
+    View3D(const View3D&) = delete;
+    View3D& operator=(const View3D&) = delete;
+};
+} // namespace skia
+} // namespace android
+#endif // View3D_DEFINED
