@@ -10,7 +10,6 @@
 #include "include/core/SkPath.h"
 #include "include/core/SkPoint3.h"
 #include "include/pathops/SkPathOps.h"
-#include "include/utils/SkCamera.h"
 #include "include/utils/SkShadowUtils.h"
 #include "samplecode/Sample.h"
 #include "src/core/SkBlurMask.h"
